fix overflow tag ver2

--- a/days7SearchTag/style.css
+++ b/days7SearchTag/style.css
@@ -31,7 +31,7 @@ body {
     padding: 10px;
     margin: 20px 0;
     font-size: 18px;
-    overflow:auto;
+    /* overflow:auto; */
 }
 .content li {
     list-style: none;
@@ -41,6 +41,7 @@ body {
     margin: 4px 3px;
     color: white;
     align-items: center;
+    word-break: break-all;
 }
 .content li i {
     font-size: 25px;
@@ -54,6 +55,7 @@ body {
     outline: none;
     font-size: 21px;
     padding: 5px;
+    width: 100%;
 }
 .btn-removeAll {
     border: none;
